# docflow-team

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TEAM_MODE_SPIKE.md  TODOS.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
backend/: config.py  main.py  requirements.txt
backend/api/routes/: conversations.py  download.py  generate.py  preview.py  sessions.py  upload.py  usage.py  ws.py
backend/models/: schemas.py
backend/processors/: __init__.py  base.py  docx_processor.py  pdf_processor.py  pptx_processor.py  xlsx_processor.py
backend/services/: db.py  message_store.py  session_store.py  usage_tracker.py  ws_manager.py
backend/services/orchestrator/: agents.py  pipeline.py  team.py
backend/services/report/: diff.py  pdf_generator.py
backend/tests/: e2e_browser_test.py  e2e_multiformat_test.py  e2e_test.py  test_api.py  test_db.py  test_message_store.py  test_pdf_processor.py  test_pptx_processor.py  test_processors.py  test_report_diff.py  test_report_pdf.py  test_session_store.py  test_sessions_api.py  test_xlsx_processor.py
backend/tests/fixtures/: ai_flavored_doc.docx  create_test_doc.py
backend/tests/poc/: test_01_sdk_startup.py  test_02_teammates.py  test_03_lateral_messaging.py  test_04_dynamic_loop.py  test_05_hooks_websocket.py  (+1 more)
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css  theme.css
(+46 files in other folders)
