[project]
name = "docflow-team"
version = "0.1.0"
description = "AI 文档精修团队 — 基于 Claude Agent Teams 的多角色文档处理系统"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["backend/tests/poc", "backend/tests/e2e_test.py", "backend/tests/e2e_browser_test.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
